[gd_scene load_steps=17 format=2]

[ext_resource path="res://title/SceneBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://title/Options.gd" type="Script" id=2]
[ext_resource path="res://assets/graphic/background/optionsbgback.png" type="Texture" id=3]
[ext_resource path="res://assets/graphic/background/optionsbgdreamworldscrollback.png" type="Texture" id=4]
[ext_resource path="res://assets/graphic/background/optionsbgstarsscrollloop.png" type="Texture" id=5]
[ext_resource path="res://assets/graphic/background/optionsbgdreamworldscrollfront.png" type="Texture" id=6]
[ext_resource path="res://title/ScrollShaderFile.tres" type="Shader" id=7]
[ext_resource path="res://assets/graphic/ui/slider_base.png" type="Texture" id=8]
[ext_resource path="res://assets/graphic/ui/slider_line.png" type="Texture" id=9]
[ext_resource path="res://assets/graphic/ui/slider_head.png" type="Texture" id=10]
[ext_resource path="res://title/Slider.gd" type="Script" id=11]
[ext_resource path="res://theme/btn_normal.tres" type="StyleBox" id=12]
[ext_resource path="res://theme/btn_hover.tres" type="StyleBox" id=13]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 7 )
shader_param/speed = 0.25
shader_param/offset = 0.0

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 7 )
shader_param/speed = 0.5
shader_param/offset = -0.6

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 7 )
shader_param/speed = 1.0
shader_param/offset = 0.0

[node name="Options" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="TextureRect" parent="Background" index="0"]
texture = ExtResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="Background" index="1"]
material = SubResource( 4 )
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 1.00072, 0.998342 )
texture = ExtResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="Background" index="2"]
material = SubResource( 2 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 6 )

[node name="TextureRect4" type="TextureRect" parent="Background" index="3"]
material = SubResource( 3 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 5 )

[node name="MasterProgress" type="TextureProgress" parent="UI/Control" index="0"]
margin_left = 340.0
margin_top = 48.0
margin_right = 933.0
margin_bottom = 234.0
rect_scale = Vector2( 0.5, 0.5 )
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
texture_progress_offset = Vector2( 64, 80 )

[node name="Slider" type="TextureRect" parent="UI/Control/MasterProgress" index="0"]
margin_left = 274.0
margin_top = 43.0
margin_right = 321.0
margin_bottom = 144.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_mode = 2
mouse_filter = 0
texture = ExtResource( 10 )
script = ExtResource( 11 )

[node name="MusicProgress" type="TextureProgress" parent="UI/Control" index="1"]
margin_left = 340.0
margin_top = 123.0
margin_right = 933.0
margin_bottom = 309.0
rect_scale = Vector2( 0.5, 0.5 )
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
texture_progress_offset = Vector2( 64, 80 )

[node name="Slider" type="TextureRect" parent="UI/Control/MusicProgress" index="0"]
margin_left = 274.0
margin_top = 43.0
margin_right = 321.0
margin_bottom = 144.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_mode = 2
mouse_filter = 0
texture = ExtResource( 10 )
script = ExtResource( 11 )

[node name="SFXProgress" type="TextureProgress" parent="UI/Control" index="2"]
margin_left = 340.0
margin_top = 202.0
margin_right = 933.0
margin_bottom = 388.0
rect_scale = Vector2( 0.5, 0.5 )
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 9 )
texture_progress_offset = Vector2( 64, 80 )

[node name="Slider" type="TextureRect" parent="UI/Control/SFXProgress" index="0"]
margin_left = 274.0
margin_top = 43.0
margin_right = 321.0
margin_bottom = 144.0
focus_neighbour_left = NodePath(".")
focus_neighbour_right = NodePath(".")
focus_mode = 2
mouse_filter = 0
texture = ExtResource( 10 )
script = ExtResource( 11 )

[node name="Label3" type="Label" parent="UI/Control" index="3"]
margin_left = 245.0
margin_top = 79.0
margin_right = 336.0
margin_bottom = 112.0
text = "Master"

[node name="Label" type="Label" parent="UI/Control" index="4"]
margin_left = 245.0
margin_top = 150.0
margin_right = 317.0
margin_bottom = 183.0
text = "Music"

[node name="Label2" type="Label" parent="UI/Control" index="5"]
margin_left = 245.0
margin_top = 232.0
margin_right = 317.0
margin_bottom = 265.0
text = "SFX"

[node name="Button" type="Button" parent="UI/Control" index="6"]
margin_left = 300.0
margin_top = 288.0
margin_right = 562.0
margin_bottom = 338.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = ExtResource( 13 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = ExtResource( 12 )
custom_styles/disabled = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
toggle_mode = true
text = "Fullscreen : OFF"

[node name="Button2" type="Button" parent="UI/Control" index="7"]
margin_left = 374.0
margin_top = 382.0
margin_right = 485.0
margin_bottom = 432.0
text = "Back"

[connection signal="value_changed" from="UI/Control/MasterProgress/Slider" to="." method="_on_master_Slider_value_changed"]
[connection signal="value_changed" from="UI/Control/MusicProgress/Slider" to="." method="_on_music_Slider_value_changed"]
[connection signal="value_changed" from="UI/Control/SFXProgress/Slider" to="." method="_on_sfx_Slider_value_changed"]
[connection signal="toggled" from="UI/Control/Button" to="." method="_on_Button_toggled"]
[connection signal="pressed" from="UI/Control/Button2" to="." method="_on_Button2_pressed"]
